# pastebin

./: Cargo.toml
public/: index.html
public/css/: hljs.css  style.css
public/js/: index.js
src/: handlers.rs  main.rs  structs.rs  utils.rs
