[package]
name = "haste_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-identity = "0.3.1"
serde = "1.0.136"

dotenv = "0.15.0"
chrono = "0.4"
rand = "0.8.4"
hex = "0.3.1"

mongodb = { version = "2.0.0", default-features = false, features = ["async-std-runtime"] }
bcrypt = "0.10"